manifests/monitoring/promstack/overlays/home/httproute-patch-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames:
  - "alertmanager.ucdialplans.com"
