manifests/monitoring/promstack/overlays/home/httproute-patch-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
  - "grafana.ucdialplans.com"
