manifests/monitoring/promstack/overlays/home/httproute-patch-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
  - "prometheus.ucdialplans.com"
