manifests/monitoring/promstack/overlays/home/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames:
  - "alertmanager.ucdialplans.com"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
  - "grafana.ucdialplans.com"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
  - "prometheus.ucdialplans.com"
